[package]
name = "lean4-rs"
version = "0.1.0"
edition = "2021"
authors = ["lemonhx <lemonhx@lemonhx.moe>"]
description = "Lean4 FFI"
license = "MIT"

[dependencies]
lean4-sys = { path = "lean4-sys" }
lean4-macro = { path = "lean4-macro" }


tokio = { version = "1.13", features = ["all"]}
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }

[workspace]
members = [
    "lean4-macro",
    "lean4-sys",
]